# geopm-slurm

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
example/: environment-override.json
src/: geopm_profile_policy_spank.c  geopm_spank.c
